--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
             </div>
         </section>
         <aside>
-            <div class="benefit">
+            <div>
                 <h3>Lead Generation</h3>
-                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/lead-generation.png" />
+                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/lead-generation.png" class="benefit">
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
             </div>
-            <div class="benefit">
+            <div>
                 <h3>Brand Awareness</h3>
-                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/brand-awareness.png" />
+                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/brand-awareness.png" class="benefit">
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
             </div>
-            <div class="benefit">
+            <div>
                 <h3>Cost Management</h3>
-                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/cost-management.png"></img>
+                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/cost-management.png" class="benefit">
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
