Added alt texts to images, cleaned up the code further. updated the readme

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon - Leaders in Marketing</title>
 </head>
 
 <body>
+    <!-- This is the navigation bar of the webpage -->
     <nav>
         <h1>Hori<span class="seo">seo</span>n</h1>
             <ul>
@@ -23,11 +24,13 @@
                 </li>
             </ul>
     </nav>
-        <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/digital-marketing-meeting.jpg" class="hero">
+        <!-- This is the hero/background image of the webpage -->
+        <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/digital-marketing-meeting.jpg" alt="background/hero image" class="hero">
     <main>
+        <!-- This is the seo, orm & smm section of the code -->
         <section>
             <div id="search-engine-optimization">
-                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/search-engine-optimization.jpg">
+                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/search-engine-optimization.jpg" alt="search-engine-optimization">
                 <div>
                     <h2>Search Engine Optimization</h2>
                     <p>
@@ -42,10 +45,10 @@
                         The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                     </p>
                 </div>
-                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/online-reputation-management.jpg">
+                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/online-reputation-management.jpg" alt="online-reputation-management">
             </div>
             <div id="social-media-marketing">
-                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/social-media-marketing.jpg">
+                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/social-media-marketing.jpg" alt="social-media-marketing">
                 <div>
                     <h2>Social Media Marketing</h2>
                     <p>
@@ -54,30 +57,32 @@
                 </div>
             </div>
         </section>
+        <!-- This is the side part of the page, which highlights the benefits -->
         <aside>
             <div>
                 <h3>Lead Generation</h3>
-                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/lead-generation.png" class="benefit-image">
+                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/lead-generation.png" alt="Lead Generation" class="benefit-image">
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
             </div>
             <div>
                 <h3>Brand Awareness</h3>
-                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/brand-awareness.png" class="benefit-image">
+                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/brand-awareness.png" alt="Brand Awareness" class="benefit-image">
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
             </div>
             <div>
                 <h3>Cost Management</h3>
-                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/cost-management.png" class="benefit-image">
+                <img src="https://bootcamp-1.s3-us-west-1.amazonaws.com/homework-1/cost-management.png" alt="Cost Management" class="benefit-image">
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
             </div>
         </aside>
     </main>
+    <!-- This is the footer section of the page -->
     <footer>
         <div class="footer-top">Made with ❤️️ by Horiseon</div>
         <p>
